2008-12-16  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-doc): use IMPNOTES instead of
	*impnotes-root-default* for ${MYIMPROOT}
	* clhs.lisp (ensure-impnotes-map): avoid barfing on known "invalid
	symbol"s

2008-12-16  Sam Steingold  <sds@gnu.org>

	* stream.d (STREAM-EXTERNAL-FORMAT): use (CAR
	CONCATENATED-STREAM-STREAMS) instead of always returning :DEFAULT

2008-12-15  Sam Steingold  <sds@gnu.org>

	* modules/dirkey/dirkey.c (LDAP::DKEY-INFO): use safe_to_string
	* modules/syscalls/calls.c (RESOLVE-HOST-IPADDR, USER-SHELLS): add
	missing begin_system_call/end_system_call pairs

2008-12-15  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_global.d (gc_resume_all_threads): fix possible double warning
	of failed CALL-WITH-TIMEOUT calls

2008-12-15  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_circ.d: remove obsolete code (threads builds are not compatible
	with GC marking circularity detection)

2008-12-15  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (sysconf_arg): updated for SUS7
	http://www.opengroup.org/onlinepubs/9699919799/functions/sysconf.html
	(confstr_arg): ditto
	http://www.opengroup.org/onlinepubs/9699919799/functions/confstr.html

2008-12-15  Sam Steingold  <sds@gnu.org>

	* modules/libsvm: upgraded to upstream 2.88

2008-12-15  Sam Steingold  <sds@gnu.org>

	* m4/ln.m4 (CL_PROG_HLN): use $cl_cv_prog_LN_S_works

2008-12-14  Sam Steingold  <sds@gnu.org>

	* stream.d (BUILT-IN-STREAM-SET-ELEMENT-TYPE): support CONCATENATED
	and BROADCAST streams, just like in SET-STREAM-EXTERNAL-FORMAT

2008-12-14  Sam Steingold  <sds@gnu.org>

	* stream.d: replace SAME_HANDLE_P_OUT with a general DEBUG_OUT

2008-12-14  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (bt_out): fflush out at the end

2008-12-14  Sam Steingold  <sds@gnu.org>

	* stream.d (handle_direction_compatible): extracted from ...
	(handle_to_stream): use it
	(make_standard_input_file_stream): if stdin_handle is not an open
	input handle, return an empty concatenated stream
