@@ -1,5 +1,11 @@
 2008-12-16  Sam Steingold  <sds@gnu.org>
 
+	* modules/libsvm/libsvm.lisp (*libsvm-version*): add DEF-C-VAR
+	* modules/libsvm/svm.cpp, modules/libsvm/svm.h (libsvm_version): add
+	patch accepted by upstream
+
+2008-12-16  Sam Steingold  <sds@gnu.org>
+
 	* makemake.in (check-doc): use IMPNOTES instead of
 	*impnotes-root-default* for ${MYIMPROOT}
 	* clhs.lisp (ensure-impnotes-map): avoid barfing on known "invalid
